fixtures/errors/bigint_typedarray_number_write.js
var b = new BigInt64Array(1);
b[0] = 1;
